--- a/SemanticSimilarityAnalysis.Proj/SemanticSimilarityAnalysis.Proj.csproj
+++ b/SemanticSimilarityAnalysis.Proj/SemanticSimilarityAnalysis.Proj.csproj
@@ -7,4 +7,13 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Folder Include="Data\" />
+      <Folder Include="Output\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="OpenAI" Version="2.1.0" />
+    </ItemGroup>
+
 </Project>
