chore: update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
 .idea/
-# SemanticSimilarityAnalysis.Proj/bin/
-# SemanticSimilarityAnalysis.Proj/obj/
 **/bin
 **/obj
 /obj
-# SemanticSimilarityAnalysis.Test/bin/
-# SemanticSimilarityAnalysis.Test/obj/
+/bin
