--- a/SemanticSimilarityAnalysis.Test/SemanticSimilarityAnalysis.Test.csproj
+++ b/SemanticSimilarityAnalysis.Test/SemanticSimilarityAnalysis.Test.csproj
@@ -8,12 +8,17 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1"/>
-        <PackageReference Include="MSTest" Version="3.6.1"/>
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
+        <PackageReference Include="MSTest" Version="3.6.1" />
+        <PackageReference Include="MSTest.TestFramework" Version="3.6.1" />
     </ItemGroup>
 
     <ItemGroup>
-        <Using Include="Microsoft.VisualStudio.TestTools.UnitTesting"/>
+      <ProjectReference Include="..\SemanticSimilarityAnalysis.Proj\SemanticSimilarityAnalysis.Proj.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <Using Include="Microsoft.VisualStudio.TestTools.UnitTesting" />
     </ItemGroup>
 
 </Project>
