--- a/SemanticSimilarityAnalysis.Proj/SemanticSimilarityAnalysis.Proj.csproj
+++ b/SemanticSimilarityAnalysis.Proj/SemanticSimilarityAnalysis.Proj.csproj
@@ -9,11 +9,13 @@
 
     <ItemGroup>
       <Folder Include="Data\" />
+      <Folder Include="PDFs\" />
       <Folder Include="Output\" />
     </ItemGroup>
 
     <ItemGroup>
       <PackageReference Include="OpenAI" Version="2.1.0" />
+      <PackageReference Include="Pdfium.Net.SDK" Version="4.94.2704" />
     </ItemGroup>
 
 </Project>
