--- a/SemanticSimilarityAnalysis.Test/SemanticSimilarityAnalysis.Test.csproj
+++ b/SemanticSimilarityAnalysis.Test/SemanticSimilarityAnalysis.Test.csproj
@@ -12,6 +12,8 @@
         <PackageReference Include="MSTest" Version="3.6.1" />
 
         <PackageReference Include="MSTest.TestFramework" Version="3.6.1" />
+
+        <PackageReference Include="Pinecone.NET" Version="3.0.0" />
     </ItemGroup>
 
     <ItemGroup>
