--- a/SemanticSimilarityAnalysis.Proj/SemanticSimilarityAnalysis.Proj.csproj
+++ b/SemanticSimilarityAnalysis.Proj/SemanticSimilarityAnalysis.Proj.csproj
@@ -16,7 +16,7 @@
     <ItemGroup>
       <PackageReference Include="OpenAI" Version="2.1.0" />
       <PackageReference Include="Pdfium.Net.SDK" Version="4.94.2704" />
-      <PackageReference Include="Pinecone.NET" Version="3.0.0" />
+      <PackageReference Include="Pinecone.Client" Version="2.1.0" />
     </ItemGroup>
 
 </Project>
