--- a/SemanticSimilarityAnalysis.Test/SemanticSimilarityAnalysis.Test.csproj
+++ b/SemanticSimilarityAnalysis.Test/SemanticSimilarityAnalysis.Test.csproj
@@ -13,7 +13,7 @@
 
         <PackageReference Include="MSTest.TestFramework" Version="3.6.1" />
 
-        <PackageReference Include="Pinecone.NET" Version="3.0.0" />
+        <PackageReference Include="Pinecone.Client" Version="2.1.0" />
     </ItemGroup>
 
     <ItemGroup>
