chore: Introduce PlotPoint model to represent data points for 3D semantic similarity plotting

--- a/SemanticSimilarityAnalysis.Proj/SemanticSimilarityAnalysis.Proj.csproj
+++ b/SemanticSimilarityAnalysis.Proj/SemanticSimilarityAnalysis.Proj.csproj
@@ -10,6 +10,7 @@
     <ItemGroup>
       <Folder Include="Data\" />
       <Folder Include="PDFs\" />
+      <Folder Include="Utils\Plot\" />
     </ItemGroup>
 
     <ItemGroup>
