chore: move CSV, PDF, and Plotting functionality to helpers
- Moved domain-specific tasks such as CSV processing, PDF handling and processing, and plot generation to the helpers folder for better code organization.

--- a/SemanticSimilarityAnalysis.Proj/SemanticSimilarityAnalysis.Proj.csproj
+++ b/SemanticSimilarityAnalysis.Proj/SemanticSimilarityAnalysis.Proj.csproj
@@ -10,7 +10,7 @@
     <ItemGroup>
       <Folder Include="Data\" />
       <Folder Include="PDFs\" />
-      <Folder Include="Utils\Plot\" />
+      <Folder Include="Helpers\PlotHelper\" />
     </ItemGroup>
 
     <ItemGroup>
