--- a/SemanticSimilarityAnalysis.Proj/SemanticSimilarityAnalysis.Proj.csproj
+++ b/SemanticSimilarityAnalysis.Proj/SemanticSimilarityAnalysis.Proj.csproj
@@ -14,6 +14,7 @@
 
     <ItemGroup>
       <PackageReference Include="CsvHelper" Version="33.0.1" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.0-preview.1.25080.5" />
       <PackageReference Include="OpenAI" Version="2.1.0" />
       <PackageReference Include="Pdfium.Net.SDK" Version="4.94.2704" />
       <PackageReference Include="Pinecone.Client" Version="2.1.0" />
