feat: ignore pushing Outputs folder which may contains big json files
copy and paste the latest version of ProcessorAli file, did not make any changes

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 .env
 **/bin
 **/obj
-
+**/Outputs
 # SemanticSimilarityAnalysis.Proj/bin/
 # SemanticSimilarityAnalysis.Proj/obj/
 # SemanticSimilarityAnalysis.Test/bin/
