chore: update gitignore to avoid unnecessary tracking of local env settings

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 # SemanticSimilarityAnalysis.Proj/bin/
 # SemanticSimilarityAnalysis.Proj/obj/
 # SemanticSimilarityAnalysis.Test/bin/
+*.DotSettings.user
