--- a/SemanticSimilarityAnalysis.Proj/SemanticSimilarityAnalysis.Proj.csproj
+++ b/SemanticSimilarityAnalysis.Proj/SemanticSimilarityAnalysis.Proj.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
@@ -8,22 +8,12 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <None Remove="Datasets\new dataset 1.xlsx" />
-      <None Remove="Datasets\new dataset 2.xlsx" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Data\" />
-      <Folder Include="PDFs\" />
-    </ItemGroup>
-
-    <ItemGroup>
       <PackageReference Include="CsvHelper" Version="33.0.1" />
       <PackageReference Include="LanguageDetection" Version="1.2.0" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.0-preview.1.25080.5" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
       <PackageReference Include="OpenAI" Version="2.1.0" />
-      <PackageReference Include="Pdfium.Net.SDK" Version="4.94.2704" />
+      <PackageReference Include="PdfPig" Version="0.1.9" />
       <PackageReference Include="Pinecone.Client" Version="2.1.0" />
     </ItemGroup>
 
