--- a/SemanticSimilarityAnalysis.Test/SemanticSimilarityAnalysis.Test.csproj
+++ b/SemanticSimilarityAnalysis.Test/SemanticSimilarityAnalysis.Test.csproj
@@ -14,6 +14,8 @@
 
         <PackageReference Include="MSTest.TestFramework" Version="3.6.1" />
 
+        <PackageReference Include="PdfPig" Version="0.1.9" />
+
         <PackageReference Include="Pinecone.Client" Version="2.1.0" />
     </ItemGroup>
 
