--- a/SemanticSimilarityAnalysis.Proj/SemanticSimilarityAnalysis.Proj.csproj
+++ b/SemanticSimilarityAnalysis.Proj/SemanticSimilarityAnalysis.Proj.csproj
@@ -13,6 +13,7 @@
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.0-preview.1.25080.5" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
       <PackageReference Include="OpenAI" Version="2.1.0" />
+      <PackageReference Include="OxyPlot.Core" Version="2.2.0" />
       <PackageReference Include="PdfPig" Version="0.1.9" />
       <PackageReference Include="Pinecone.Client" Version="2.1.0" />
     </ItemGroup>
