--- a/SemanticSimilarityAnalysis.Proj/SemanticSimilarityAnalysis.Proj.csproj
+++ b/SemanticSimilarityAnalysis.Proj/SemanticSimilarityAnalysis.Proj.csproj
@@ -18,8 +18,11 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Accord.MachineLearning" Version="3.8.2-alpha" />
+      <PackageReference Include="Accord.Statistics" Version="3.8.2-alpha" />
       <PackageReference Include="CsvHelper" Version="33.0.1" />
       <PackageReference Include="LanguageDetection" Version="1.2.0" />
+      <PackageReference Include="MathNet.Numerics" Version="6.0.0-beta2" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.0-preview.1.25080.5" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
       <PackageReference Include="OpenAI" Version="2.1.0" />
