--- a/SemanticSimilarityAnalysis.Test/SemanticSimilarityAnalysis.Test.csproj
+++ b/SemanticSimilarityAnalysis.Test/SemanticSimilarityAnalysis.Test.csproj
@@ -8,6 +8,9 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Accord.MachineLearning" Version="3.8.2-alpha" />
+        <PackageReference Include="Accord.Statistics" Version="3.8.2-alpha" />
+        <PackageReference Include="MathNet.Numerics" Version="6.0.0-beta2" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
         <PackageReference Include="Moq" Version="4.20.72" />
         <PackageReference Include="MSTest" Version="3.6.1" />
