--- a/SemanticSimilarityAnalysis.Test/SemanticSimilarityAnalysis.Test.csproj
+++ b/SemanticSimilarityAnalysis.Test/SemanticSimilarityAnalysis.Test.csproj
@@ -8,6 +8,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="9.0.2" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="9.0.2" />
         <PackageReference Include="Accord.MachineLearning" Version="3.8.2-alpha" />
         <PackageReference Include="Accord.Statistics" Version="3.8.2-alpha" />
         <PackageReference Include="MathNet.Numerics" Version="6.0.0-beta2" />
