feat: implement python-dotnet connector helper class to use python in dotnet application and graph exports

--- a/SemanticSimilarityAnalysis.Proj/SemanticSimilarityAnalysis.Proj.csproj
+++ b/SemanticSimilarityAnalysis.Proj/SemanticSimilarityAnalysis.Proj.csproj
@@ -7,12 +7,14 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
     
+    <ItemGroup>
       <None Remove="Datasets\new dataset 1.xlsx" />
       <None Remove="Datasets\new dataset 2.xlsx" />
     </ItemGroup>
 
     <ItemGroup>
       <Folder Include="Data\" />
+      <Folder Include="Outputs\CSV\" />
       <Folder Include="PDFs\" />
     </ItemGroup>
 
@@ -25,14 +27,13 @@
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.0-preview.1.25080.5" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
       <PackageReference Include="OpenAI" Version="2.1.0" />
-      <PackageReference Include="OxyPlot.Core" Version="2.2.0" />
       <PackageReference Include="PdfPig" Version="0.1.9" />
       <PackageReference Include="Accord.MachineLearning" Version="3.8.2-alpha" />
       <PackageReference Include="Accord.Statistics" Version="3.8.2-alpha" />
       <PackageReference Include="MathNet.Numerics" Version="6.0.0-beta2" />
-      <PackageReference Include="OxyPlot.Core" Version="2.2.0" />
       <PackageReference Include="PdfPig" Version="0.1.9" />
       <PackageReference Include="Pinecone.Client" Version="2.1.0" />
+      <PackageReference Include="pythonnet" Version="3.1.0-preview2024-09-06" />
     </ItemGroup>
 
 </Project>
