--- a/SemanticSimilarityAnalysis.Test/SemanticSimilarityAnalysis.Test.csproj
+++ b/SemanticSimilarityAnalysis.Test/SemanticSimilarityAnalysis.Test.csproj
@@ -17,11 +17,11 @@
 
         <PackageReference Include="MSTest.TestFramework" Version="3.6.1" />
 
-        <PackageReference Include="OxyPlot.Core" Version="2.2.0" />
-
         <PackageReference Include="PdfPig" Version="0.1.9" />
 
         <PackageReference Include="Pinecone.Client" Version="2.1.0" />
+
+        <PackageReference Include="pythonnet" Version="3.1.0-preview2024-09-06" />
     </ItemGroup>
 
     <ItemGroup>
