feat: modified .gitignore file and added new dataset for analysis

--- a/.gitignore
+++ b/.gitignore
@@ -9,4 +9,4 @@ Solution Items
 # SemanticSimilarityAnalysis.Proj/obj/
 # SemanticSimilarityAnalysis.Test/bin/
 *.DotSettings.user
-**/Datasets/
+#**/Datasets/
