--- a/SemanticSimilarityAnalysis.Proj/SemanticSimilarityAnalysis.Proj.csproj
+++ b/SemanticSimilarityAnalysis.Proj/SemanticSimilarityAnalysis.Proj.csproj
@@ -23,4 +23,8 @@
       <PackageReference Include="pythonnet" Version="3.1.0-preview2024-09-06" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Outputs\CSV\" />
+    </ItemGroup>
+
 </Project>
