--- a/SemanticSimilarityAnalysis.Proj/SemanticSimilarityAnalysis.Proj.csproj
+++ b/SemanticSimilarityAnalysis.Proj/SemanticSimilarityAnalysis.Proj.csproj
@@ -15,6 +15,7 @@
     <ItemGroup>
       <Folder Include="Data\" />
       <Folder Include="Outputs\CSV\" />
+      <Folder Include="Outputs\Plots\" />
       <Folder Include="PDFs\" />
     </ItemGroup>
 
@@ -27,7 +28,6 @@
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.0-preview.1.25080.5" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
       <PackageReference Include="OpenAI" Version="2.1.0" />
-      <PackageReference Include="PdfPig" Version="0.1.9" />
       <PackageReference Include="Accord.MachineLearning" Version="3.8.2-alpha" />
       <PackageReference Include="Accord.Statistics" Version="3.8.2-alpha" />
       <PackageReference Include="MathNet.Numerics" Version="6.0.0-beta2" />
