--- a/.gitignore
+++ b/.gitignore
@@ -9,5 +9,5 @@ Solution Items
 # SemanticSimilarityAnalysis.Proj/obj/
 # SemanticSimilarityAnalysis.Test/bin/
 *.DotSettings.user
-#**/Datasets/
+**/Datasets/
 **/Datasets/TXTs/Sentences
