--- a/SemanticSimilarityAnalysis.Proj/SemanticSimilarityAnalysis.Proj.csproj
+++ b/SemanticSimilarityAnalysis.Proj/SemanticSimilarityAnalysis.Proj.csproj
@@ -14,14 +14,19 @@
 		<PackageReference Include="CsvHelper" Version="33.0.1" />
 		<PackageReference Include="LanguageDetection" Version="1.2.0" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="9.0.2" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="9.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="9.0.2" />
 		<PackageReference Include="MathNet.Numerics" Version="6.0.0-beta2" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.0" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.0-preview.1.25080.5" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 		<PackageReference Include="OpenAI" Version="2.1.0" />
 		<PackageReference Include="PdfPig" Version="0.1.9" />
 		<PackageReference Include="Pinecone.Client" Version="2.1.0" />
 		<PackageReference Include="pythonnet" Version="3.1.0-preview2024-09-06" />
+		<None Update="appsettings.json">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
 	</ItemGroup>
 
 </Project>
