--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,6 @@ Solution Items
 # SemanticSimilarityAnalysis.Proj/obj/
 # SemanticSimilarityAnalysis.Test/bin/
 *.DotSettings.user
-**/Datasets/
-**/Datasets/TXTs/Sentences
+# **/Datasets/
+# **/Datasets/TXTs/Sentences
 appsettings.json
